--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,2 +1,2 @@
-* fail and pass return functions for application and object methods
+* add thread for saving database. has to lock a access var for variables
 * create MongoDB IO
