--- a/ToDo.txt
+++ b/ToDo.txt
@@ -4,3 +4,5 @@
 * build yote homepage
 * build page editor
 * yote objects that brige to files an allow for editing.
+* unit test that allows underscores in field names when translating data from the client
+* bug SE game : should disallow wrong values for starting players and resources and levels
