Yote::Obj : renamed rekey to _rekey. ObjProvider : updated list of excluded methods to send to client. WebAppServer : the dirty delta now includes the changed data. YoteRoot : fetch now returns a list of objects. yote.js : expect dirty delta to include data. expect a list of things from fetch.

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,3 +1,7 @@
+* have methods sent just once per class
+* have app objects have a method that gives a hint to yote as to which things to fetch with it
+* use the multi fetch parameter
+
 * add GRU module for searches against tag lists
 * update to not use backticks
 * make sure installer script works universally
