--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,14 +1,25 @@
-* have methods sent just once per class
-* have app objects have a method that gives a hint to yote as to which things to fetch with it
-* use the multi fetch parameter
+FOR ALPHA
 
+  * Enable caching that pays attention to who has what.
+  * Enable Cron
+  * Make guest tokens required for running any non-root app command.
+  * Create yote admin page for
+        - viewing apps
+        - viewing user login objects
+        - cron admin
+  * Create guest page to be hosted at madyote.com
+  * Make installer work for the common case of user having root.
+  * Have server respond to javascript permissions requests.
+
+
+BEYOND
+
+* have methods sent just once per class
 * add GRU module for searches against tag lists
 * update to not use backticks
 * make sure installer script works universally
 * build yote homepage
 * build page editor
 * yote objects that brige to files an allow for editing.
-* unit test that allows underscores in field names when translating data from the client
-* bug SE game : should disallow wrong values for starting players and resources and levels
 * replace Crypt:Passwd with something better.
 * unit test of app id passing in the IO. If its missing, the wrong account may be used.
