--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-04-27  Eric Wolf  <coyocanid@gmail.com>
+
+	* VERSION 0.0980
+	* fixed a weird upload bug. The iframe was wrapping the return value in a pre tag which could not be interpreted as JSON
+	* added more documentation for the site
+	* added more POD
+	* dist build is now working nicely
+
 2013-04-13  Eric Wolf  <coyocanid@gmail.com>
 
 	* fixed _load bug where it was being called too early.
