interim checkin. working on ui tools

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -9,6 +9,10 @@ FOR Stable Alpha
   * Create program to reset whole config
   * More yote tools
   * Better way to set variables from the client rather than relying on uppercase
+  * UI - account change password and request password reset link
+  * Versions in javascript
+  * method to get version to client
+  * add test only requirements to Build.PL
 
 
 #----------- Pre Aril 2013 ----
