--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-05-13  Eric Wolf  <coyocanid@gmail.com>
+
+	* VERSION 0.0986 ( had not CPAN'd this version yet )
+	* fixed serious webserver bug where query parameters were being misinterpreted.
+
 2013-05-11  Eric Wolf  <coyocanid@gmail.com>
 
 	* VERSION 0.0986
