Upped version. Fixed installation bug where first time launch would not work, and cleaned up where sqlite file goes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 2013-05-11  Eric Wolf  <coyocanid@gmail.com>
 
-	* VERSION 0.0986
+	* VERSION 0.0987
 	* fixed bug where http_referer was not being read correctly
+	* fixed bug in Yote.pm where the first time Yote was launched, it wouldn't start.
+	* moved SQLite data file to yote root directory in Yote.pm 
 
 2013-05-10  Eric Wolf  <coyocanid@gmail.com>
 
