--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-05-19  Eric Wolf  <coyocanid@gmail.com>
+
+	* VERSION 0.0989
+	* fixed utf-8 encoding bug
+	* used perlcritic and followed some suggestions
+
 2013-05-14  Eric Wolf  <coyocanid@gmail.com>
 
 	* VERSION 0.0987
