--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-06-12  Eric Wolf  <coyocanid@gmail.com>
+
+	* VERSION 0.0996
+	* added number of threads as a configuration value
+
+2013-06-09  wolf  <coyocanid@gmail.com>
+
+	* VERSION 0.0994
+	* paginate updates. Now have paginate_list and paginate_hash to be more clear.
+
 2013-06-03  Eric Wolf  <coyocanid@gmail.com>
 
 	* VERSION 0.0993
