--- a/README
+++ b/README
@@ -11,9 +11,8 @@ Summary
 
 
 Note
-    As of this writing Yote is on version 0.0975. 
-    It is not yet stable and is in pre-alpha mode.
-    Consider this alpha software once version 0.100 is reached.
+    As of this writing Yote is on version 0.1000.
+    It is in alpha mode.
     Please email coyocanid@gmail.com to report bugs or issues or 
     feature requests.
 
