--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-07-28  Eric Wolf  <eric@DobreDen>
+
+	* VERSION 0.1007
+	* added search by list
+
 2013-07-25  Eric Wolf  <eric@DobreDen>
 
 	* VERSION 0.1006
