a bugfix in main.js, util enchancements to control_table.

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,7 +1,8 @@
 Next updates
   * changed permissions model so that YoteRoot checks if accounts are root
   * Control table : make sure that html tags it creates have appropriate classes. Use the new 'prefix_classname' variable
-  
+  * Document all the widgets
+  * for control_table, show showing a-n of y numbering.
 
 FOR Stable Alpha
 
