--- a/ToDo.txt
+++ b/ToDo.txt
@@ -4,6 +4,8 @@ Next updates
   * Document all the widgets
   * for control_table, show showing a-n of y numbering.
 
+  * search_hash for all IO types, as well as tests for it
+
 FOR Stable Alpha
 
  - * add option to yote_server to do a full reconfiguring of the server
