paginate for all 3 io drivers is working and tests have been updated

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -7,6 +7,9 @@ Next updates
   -* search_hash for all IO types, as well as tests for it ( just one sort )
   -* add sort for control table for Mongo and Mysql
   * unify sort, search and pagination
+  * complete test cases for hash pagination
+
+* for mongo db, maybe do a separate collection for list parts. When a list is too big, maybe its object nodes uses this other collection to split the list.
 
 FOR Stable Alpha
 
