--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,10 +1,16 @@
 Next updates
+  * make sure search and sort fields can both be given. update the tests for that.
+  * think of permissiveness. Consider with the LOCK_MODE change below. Maybe the default should be make things as permissive as 
+    possible and the user can override that permissivity, possibly with a set of tags or conditions to allow the thing to happen.
+    with a double underscore as the reserved space for this __. The goal for this is ease of programming. Maybe the default is
+    the object creator or root can edit it. CRUD permissions? Or use the subclassing below ( or even configuring with __ )
   * configuration for LOCK_MODE
-  * new subclasses for Yote::Obj, one that allows anyone to update its fields, and the other that allows only root to - these should supplant creating some objects.
-  * count for searches! This is missing and makes control_table buggy.
+  * new subclasses for Yote::Obj, one that allows anyone to update its fields, and the other that allows only root to - these should supplant creating some objects. may be made moot with the permissiveness above
+  * add_to, remove_from, delete_key - Obj methods to allow for list or hash manipulation off of this object. Will work only for root if _ is the first letter
+  -* count for searches! This is missing and makes control_table buggy.
   * Exclusive cron. Means cron entry must have a unique name and that by default only one of that name may be run at once.
   * Update how logging is done. Access log and error log like apache. Capture STDERR and collect to error log
-  * changed permissions model so that YoteRoot checks if accounts are root
+  x* changed permissions model so that YoteRoot checks if accounts are root. (won't do it now)
   * Document all the widgets
   * complete test cases for hash pagination
   * MongoIO pagination update - use different collection for large tables
