--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,30 +1,43 @@
+The Phases :
+  * GET IT WORKING        Alpha 0
+  * GET IT CORRECT        Alpha 1
+  * GET IT COMPREHENSIBLE Alpha 2
+  * GET IT FAST           Alpha 3
+  * GET IT PRETTY         Alpha 4
+
+Currently wrapping up phase Alpha 1 and making headway on Alpha 2
+
+
 Next updates
   * clean up widgets to make sure tag id fields are unique. prep_edit, for example, does not guarantee this
-  * Indexing for lists always starts at 0...no jumping around with undefs?
-  * Cron - make scheduled_times a list of objects with 'time' and 'note' fields.
+  * review all methods and classes and remove those that no longer fit
+  -* Indexing for lists always starts at 0...no jumping around with undefs? Agreed. Done and done.
+  x* Cron - make scheduled_times a list of objects with 'time' and 'note' fields.
+  * add comments for crons
   * table for scalar list entries
   * bug : undefined showing up for undefined me.prefix_classname
   * add tests for list_insert, list_delete, hash_insert, hash_delete
-  * make sure dirty is marked for list_insert, list_delete, hash_insert, hash_delete
-  * consider moving this list to github for tracking.
+  * test for pagination in unit_tests.html
+  * make sure dirty is marked for list_insert, list_delete, hash_insert, hash_delete. (add a dirty_if_present?)
+  x* consider moving this list to github for tracking. ( this is always here. just need discipline to do it)
   * control_table to work with the cool built in pagination that objects already have!
   -* make sure search and sort fields can both be given. update the tests for that.
-  * Permissions updates
+  -* Permissions updates
       * . Consider with the LOCK_MODE change below. Maybe the default should be make things as permissive as 
           possible and the user can override that permissivity, possibly with a set of tags or conditions to allow the thing to happen.
     	  with a double underscore as the reserved space for this __. The goal for this is ease of programming. Maybe the default is
     	  the object creator or root can edit it. CRUD permissions? Or use the subclassing below ( or even configuring with __ )
         * configuration for LOCK_MODE
-	* new subclasses for Yote::Obj, one that allows anyone to update its fields, and the other that allows only root to - these should supplant creating some objects. may be made moot with the permissiveness above
+	-* new subclasses for Yote::Obj, one that allows anyone to update its fields, and the other that allows only root to - these should supplant creating some objects. may be made moot with the permissiveness above
   -* add_to, remove_from, delete_key - Obj methods to allow for list or hash manipulation off of this object. Will work only for root if _ is the first letter
   -* count for searches! This is missing and makes control_table buggy.
-  * Exclusive cron. Means cron entry must have a unique name and that by default only one of that name may be run at once.
+  x* Exclusive cron. Means cron entry must have a unique name and that by default only one of that name may be run at once.
   * Update how logging is done. Access log and error log like apache. Capture STDERR and collect to error log
   x* changed permissions model so that YoteRoot checks if accounts are root. (won't do it now)
   * Document all the widgets
-  * complete test cases for hash pagination
+  -* complete test cases for hash pagination
   * MongoIO pagination update - use different collection for large tables
-  * review all methods and classes and remove those thta no longer fit
+  * for mongo db, maybe do a separate collection for list parts. When a list is too big, maybe its object nodes uses this other collection to split the list.
   * control_table sort
   - * Control table : make sure that html tags it creates have appropriate classes. Use the new 'prefix_classname' variable
   -* for control_table, show showing a-n of y numbering.
@@ -34,31 +47,30 @@ Next updates
   -* add sort for control table for Mongo and Mysql
   -* unify sort, search and pagination
 
-* for mongo db, maybe do a separate collection for list parts. When a list is too big, maybe its object nodes uses this other collection to split the list.
 
 FOR Stable Alpha
 
- - * add option to yote_server to do a full reconfiguring of the server
- - * deadlock test cases
- - * cache clearning test cases
+ -* add option to yote_server to do a full reconfiguring of the server
+ -* deadlock test cases
+ -* cache clearning test cases
   * Add object versioning? Store a new field in the database : version. Then _load can be used to check the version.
   * Add timing alarm and max execute length parameter for configuration ( though use something other than sleep, a watchdog thread maybe
-  -* Move MongoIO, etc, to an IO sub package
-  * refactor IO to include better back references. Object will have to take note. ( again, maybe not with the new paginate )
-  -* Enable Cron
- - Move encrypt_pass to somewhere self, maybe? Moved to ObjProvider
+ -* Move MongoIO, etc, to an IO sub package
+ ?x* refactor IO to include better back references. Object will have to take note. ( again, maybe not with the new paginate )
+ -* Enable Cron
+  - Move encrypt_pass to somewhere self, maybe? Moved to ObjProvider
   * Security improvement : offer up proxies for other users' accounts. This makes sure that
      the client does not access account data it shouldn't
   * Create admin pages
-  * Unify unit tests for different stores
- - * Create program to reset root password
- - * Create program to reset whole config ( code for this is done as part of Yote.pm )
+ -* Unify unit tests for different stores
+ -* Create program to reset root password
+ -* Create program to reset whole config ( code for this is done as part of Yote.pm )
   * More yote tools
   * Add at least simple modperl support. Maybe use plack?
   * UI - account change password and request password reset link
   * method to get version to client
- - * add test only requirements to Build.PL
- - include app class rather than app id in the IO
+ -* add test only requirements to Build.PL
+ -* include app class rather than app id in the IO
 
 
 #----------- Pre Aril 2013 ----
@@ -70,10 +82,10 @@ FOR ALPHA
 
   -* Enable caching that pays attention to who has what.
   -* Make guest tokens required for running any non-root app command.
-  * Create yote admin page for
-        - viewing apps
-        - viewing user login objects
-        - cron admin
+  -* Create yote admin page for
+        -* viewing apps
+        -* viewing user login objects
+        -* cron admin
   * Create guest page to be hosted at madyote.com
   - * Make installer work for the common case of user having root. [ done, needs testing ]
   -* Have server respond to javascript permissions requests. ( this is now moot )
